# router

./: .env.example  .gitignore  Cargo.toml  DNS_IMPLEMENTATION_SUMMARY.md  DNS_SETUP.md  FINAL_DNS_MAC_IMPLEMENTATION.md  INTEGRATION_TEST_EXAMPLE.md  MAC_HOSTNAME_CONFIG.md  build.rs  justfile  readme.md  sdkconfig.defaults
.cargo/: config.toml
src/: client.rs  client_main.rs  dns_server.rs  dns_utils.rs  lib.rs  mac_hostname_config.rs  mac_hostname_demo.rs  main.rs  main_clean.rs  mdns_service.rs
