[package]
name = "esp-wifi-ap"
version = "0.1.0"
authors = ["Lukasz Gintowt <syzer3@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-wifi-ap"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0.98"
heapless = "0.8.0"

# Espressif crates
esp-idf-sys    = "0.36"
esp-idf-svc    = "0.51"
esp-idf-hal    = "0.45"

# On-board WS2812 LED (GPIO-8)
ws2812-esp32-rmt-driver = { version = "0.12.0", features = ["smart-leds-trait"]}
smart-leds              = "0.4"

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"
