[package]
name = "esp-wifi-ap"
version = "0.1.0"
authors = ["Lukasz Gintowt <syzer3@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
build = "build.rs"

[[bin]]
name = "esp-wifi-ap"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
    "experimental",
    "alloc",
] }
esp-idf-sys = { version = "0.36.1", features = ["native", "binstart"] }
esp-idf-hal = { version = "0.45.2", features = [
#    "rmt-legacy",
] }

anyhow = "1.0.98"
heapless = "0.8.0"
embedded-svc = "0.28.1"
getrandom = "0.3.3"
smart-leds-trait        = "0.3.1"
smart-leds = "0.4.0"
embedded-hal            = "0.2.7"
ws2812-esp32-rmt-driver = { version = "0.12", default-features = false, features = [
    "smart-leds-trait"] }
rgb = "0.8"
names = "0.14"
once_cell = "1.19" # not sure if goot idea WDYT?

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"
